--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,6 +4,9 @@ on:
       - main
       - 'docs/**'
 
+permissions:
+  contents: write
+
 jobs:
   publish-docs:
     name: Publish docs
@@ -15,7 +18,7 @@ jobs:
         otp: [24.1.7]
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     - name: Setup Erlang & Elixir
       uses: erlef/setup-beam@v1
@@ -25,7 +28,7 @@ jobs:
 
     # Caching
     - name: Dependencies cache
-      uses: actions/cache@v1
+      uses: actions/cache@v4
       with:
         path: deps
         key: ${{ runner.os }}-deps-${{ hashFiles('mix.lock') }}
@@ -33,7 +36,7 @@ jobs:
           ${{ runner.os }}-deps-${{ hashFiles('mix.lock') }}
 
     - name: Build cache
-      uses: actions/cache@v1
+      uses: actions/cache@v4
       with:
         path: _build
         key: ${{ runner.os }}-build-dev-${{matrix.elixir}}-${{matrix.otp}}-${{ hashFiles('mix.lock') }}
@@ -49,7 +52,7 @@ jobs:
       run: mix docs
 
     - name: Push docs
-      uses: JamesIves/github-pages-deploy-action@v4.2.5
+      uses: JamesIves/github-pages-deploy-action@v4
       with:
         branch: gh-pages
         folder: doc
