--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,8 @@
 on: push
 
+permissions:
+  contents: write
+
 jobs:
   checks:
     name: Elixir ${{matrix.elixir}} / OTP ${{matrix.otp}}
@@ -65,3 +68,23 @@ jobs:
 
     - name: Code format
       run: mix format --check-formatted --dry-run
+
+  docs:
+    name: Docs
+    needs: [checks]
+    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/docs/')
+    uses: ./.github/workflows/publish-docs.yml
+    secrets: inherit
+    with:
+      elixir_version: 1.13.2
+      otp_version: 24.1.7
+
+  release:
+    name: Release
+    needs: [checks]
+    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/v')
+    uses: ./.github/workflows/publish-release.yml
+    secrets: inherit
+    with:
+      elixir_version: 1.13.2
+      otp_version: 24.1.7
