--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,9 +9,16 @@ jobs:
     runs-on: ubuntu-20.04
 
     strategy:
+      fail-fast: false
       matrix:
-        elixir: [1.14.4]
-        otp: [25.2.3]
+        # see https://hexdocs.pm/elixir/compatibility-and-deprecations.html#between-elixir-and-erlang-otp
+        elixir: [1.17.3, 1.16.3, 1.15.8]
+        otp: [27.1.1, 26.2.5.3, 25.3.2.14]
+        exclude:
+        - elixir: 1.16.3
+          otp: 27.1.1
+        - elixir: 1.15.8
+          otp: 27.1.1
 
     services:
       postgres:
@@ -35,6 +42,7 @@ jobs:
       with:
         elixir-version: ${{ matrix.elixir }}
         otp-version: ${{ matrix.otp }}
+        version-type: strict
 
     # Caching
     - name: Dependencies cache
